log/build_2025-05-20_21-54-01/robot_camera_processor/stdout_stderr.log
-- Found ament_cmake: 1.3.11 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found rclcpp: 16.0.12 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.6 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.6 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.6 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.7 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 4.8.0 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found image_transport: 3.1.11 (/opt/ros/humble/share/image_transport/cmake)
-- Found tf2: 0.25.12 (/opt/ros/humble/share/tf2/cmake)
-- Found tf2_ros: 0.25.12 (/opt/ros/humble/share/tf2_ros/cmake)
-- Found visualization_msgs: 4.8.0 (/opt/ros/humble/share/visualization_msgs/cmake)
-- Found ament_lint_auto: 0.12.12 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: 
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/eragon/ArUco/build/robot_camera_processor
Consolidate compiler generated dependencies of target robot_camera_processor
[ 50%] Building CXX object CMakeFiles/robot_camera_processor.dir/src/robot_camera_processor.cpp.o
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor.cpp: In member function ‘void RobotCameraProcessor::image_callback(const ConstSharedPtr&)’:
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor.cpp:126:52: error: ‘toMsg’ is not a member of ‘tf2’
  126 |                     marker.pose.orientation = tf2::toMsg(q);
      |                                                    ^~~~~
/home/eragon/ArUco/src/robot_camera_processor/src/robot_camera_processor.cpp:149:57: error: ‘toMsg’ is not a member of ‘tf2’
  149 |                     transform.transform.rotation = tf2::toMsg(q);
      |                                                         ^~~~~
gmake[2]: *** [CMakeFiles/robot_camera_processor.dir/build.make:76: CMakeFiles/robot_camera_processor.dir/src/robot_camera_processor.cpp.o] Ошибка 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/robot_camera_processor.dir/all] Ошибка 2
gmake: *** [Makefile:146: all] Ошибка 2
